--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-<html><head><title>404 Not Found</title></head>
+<html>
 <body>
-<center><h1>404 Not Found</h1></center>
-<hr><center>Page Not Found Error.<br>Powered by <a href="https://github.io/" target="_blank">GitHub Pages</a></center>
-
-
-
-
-
-
-
-
-</body></html>
+<meta http-equiv="refresh" content="0;URL=home/home.html">
+</body>
+</html>
