--- a/home/home.html
+++ b/home/home.html
@@ -3,7 +3,7 @@
 <style>
 @font-face {
   font-family: 'MeiryoFont';
-  src: url('G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
+  src: url('https://G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
 }
 body {
   font-family: 'MeiryoFont',Meiryo UI;
@@ -31,6 +31,6 @@ a:active {
 </head>
 <body>
 <h1>Home</h1>
-<a href="G4TG5AG.github.io/downloads/download.html">Downloads</a>
+<a href="https://G4TG5AG.github.io/downloads/download.html">Downloads</a>
 </body>
 </html>
