--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<meta http-equiv="refresh" content="0;URL=G4TG5AG.github.io/home/home.html">
+<meta http-equiv="refresh" content="0;URL=https://G4TG5AG.github.io/home/home.html">
 </body>
 </html>
