--- a/downloads/download.html
+++ b/downloads/download.html
@@ -3,7 +3,7 @@
 <style>
 @font-face {
   font-family: 'MeiryoFont';
-  src: url('G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
+  src: url('https://G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
 }
 body {
   font-family: 'MeiryoFont',Meiryo UI;
@@ -31,10 +31,10 @@ a:active {
 </head>
 <body>
 <h1>Downloads</h1>
-<a href="G4TG5AG.github.io/home/home.html">Home</a><br><br><br>
-<a href="G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x64/コンピューターの詳細.exe" download="コンピューターの詳細_x64.exe">コンピューターの詳細(x64)</a><br>
-<a href="G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x86/コンピューターの詳細.exe" download="コンピューターの詳細_x86.exe">コンピューターの詳細(x86)</a><br>
-<a href="G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/ARM64/コンピューターの詳細.exe" download="コンピューターの詳細_arm64.exe">コンピューターの詳細(ARM64)</a><br>
-<a href="G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/AnyCPU/コンピューターの詳細.exe" download="コンピューターの詳細_anycpu.exe">コンピューターの詳細(AnyCPU)</a><br><br>
+<a href="https://G4TG5AG.github.io/home/home.html">Home</a><br><br><br>
+<a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x64/コンピューターの詳細.exe" download="コンピューターの詳細_x64.exe">コンピューターの詳細(x64)</a><br>
+<a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x86/コンピューターの詳細.exe" download="コンピューターの詳細_x86.exe">コンピューターの詳細(x86)</a><br>
+<a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/ARM64/コンピューターの詳細.exe" download="コンピューターの詳細_arm64.exe">コンピューターの詳細(ARM64)</a><br>
+<a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/AnyCPU/コンピューターの詳細.exe" download="コンピューターの詳細_anycpu.exe">コンピューターの詳細(AnyCPU)</a><br><br>
 </body>
 </html>
