--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="refresh" content="0;URL=https://G4TG5AG.github.io/home/home.html">
   <script type="text/javascript">
       function first(){
-        var user = prompt("Please enter your name");
+        var user = prompt("Please enter user name");
         if(user==false || user==null){
           alert("Please enter user name");
           first();
