--- a/index.html
+++ b/index.html
@@ -1,24 +1,8 @@
 <html>
-<body>
-<meta http-equiv="refresh" content="0;URL=https://G4TG5AG.github.io/home/home.html">
+ <body>
   <script type="text/javascript">
       function first(){
-        var user = prompt("Please enter user name");
-        if(user==false || user==null){
-          alert("Please enter user name");
-          first();
-        }else{
-          if(user=="G4TG5AG")
-          {
-            
-          }
-          else
-          {
-            alert("That user does not exist");
-            first();
-          }
-        }
-        var pass=prompt("Welcome "+user+"　Please enter your password");
+        var pass=prompt("Please enter password");
         var passWord="DESKTOP-G4TG5AG"
         if(pass == passWord){
           
@@ -28,6 +12,7 @@
         }
       }
       window.onload=first();
-    </script>
-</body>
+   </script>
+  <meta http-equiv="refresh" content="0;URL=https://G4TG5AG.github.io/home/home.html">
+ </body>
 </html>
