--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       window.onload=first();
   </script>
   -->
-  <meta http-equiv="refresh" content="0;URL=https://G4TG5AG.github.io/home/home.html">
+  <meta http-equiv="refresh" content="0;URL=https://G4TG5AG.github.io/home">
  </body>
 </html>
