--- a/home/index.html
+++ b/home/index.html
@@ -31,6 +31,6 @@ a:active {
 </head>
 <body>
 <h1>Home</h1>
-<a href="https://G4TG5AG.github.io/downloads/download.html">Downloads</a>
+<a href="https://G4TG5AG.github.io/downloads/">Downloads</a>
 </body>
 </html>
