--- a/downloads/index.html
+++ b/downloads/index.html
@@ -32,6 +32,7 @@
  <body>
   <h1>Downloads</h1>
   <a href="https://G4TG5AG.github.io/home/">Home</a><br><br><br>
+  <h3>Windows</h3>
   <a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x64/コンピューターの詳細.exe" download="コンピューターの詳細_x64.exe">コンピューターの詳細(x64)</a><br>
   <a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x86/コンピューターの詳細.exe" download="コンピューターの詳細_x86.exe">コンピューターの詳細(x86)</a><br>
   <a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/ARM64/コンピューターの詳細.exe" download="コンピューターの詳細_arm64.exe">コンピューターの詳細(ARM64)</a><br>
