--- a/downloads/index.html
+++ b/downloads/index.html
@@ -32,7 +32,9 @@
  <body>
   <h1>Downloads</h1>
   <a href="https://G4TG5AG.github.io/home/">Home</a><br><br><br>
-  <font size="4">Windows</font><br>
+  <font size="4">Windows</font><br><br>
+  <font size="4">コンピューターの詳細</font><br>
+  <font size="3">コンピューターのGPUやCPU、ディスプレイ モニターなどに関する情報をタスクトレイ アイコンを右クリックして選択するだけで取得できるツールです。</font><br>
   <a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x64/コンピューターの詳細.exe" download="コンピューターの詳細_x64.exe">コンピューターの詳細(x64)</a><br>
   <a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x86/コンピューターの詳細.exe" download="コンピューターの詳細_x86.exe">コンピューターの詳細(x86)</a><br>
   <a href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/ARM64/コンピューターの詳細.exe" download="コンピューターの詳細_arm64.exe">コンピューターの詳細(ARM64)</a><br>
