--- a/downloads/index.html
+++ b/downloads/index.html
@@ -62,7 +62,7 @@
  </head>
  <body>
   <h1>Downloads</h1>
-  <a href="https://G4TG5AG.github.io/home/">Home</a><br><br><br>
+  <a href="https://G4TG5AG.github.io/home/">Home</a><br>
   <ul class="cp_list">
    <font size="5">Windows</font><br>
    <li><font size="4">コンピューターの詳細</font><br></li>
