--- a/home/index.html
+++ b/home/index.html
@@ -1,36 +1,60 @@
 <html>
  <head>
   <style>
-  @font-face {
-    font-family: 'MeiryoFont';
-    src: url('https://G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
-  }
-  body {
-    font-family: 'MeiryoFont',Meiryo UI;
-  }
-  .MeiryoFontText {
-    font-family: 'MeiryoFont',Meiryo UI;
-  }
-  a:link {
-   color: #0078d4;
-   text-decoration: underline;
-  }
-  a:visited {
-   color: #0078d4;
-   text-decoration: underline;
-  }
-  a:hover {
-   
-  }
-  a:active {
-   color: #0078d4;
-   text-decoration: underline;
-  }
+   @font-face {
+     font-family: 'MeiryoFont';
+     src: url('https://G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
+   }
+   body {
+     font-family: 'MeiryoFont',Meiryo UI;
+   }
+   .MeiryoFontText {
+     font-family: 'MeiryoFont',Meiryo UI;
+   }
+   /*
+   a:link {
+     color: #0078d4;
+     text-decoration: underline;
+   }
+   a:visited {
+     color: #0078d4;
+     text-decoration: underline;
+   }
+   a:hover {
+      
+   }
+   a:active {
+     color: #0078d4;
+     text-decoration: underline;
+   }
+   */
+   .cp_link2 {
+     text-decoration: none;
+     position: relative;
+     padding: 0.1em 0.3em;
+     display: inline-block;
+     transition: .3s;
+     color: #0078d4;
+   }
+   .cp_link2::after {
+     position: absolute;
+     bottom: 0;
+     left: 50%;
+     content: '';
+     width: 0;
+     height: 1px;
+     background-color: #0078d4;
+     transition: .3s;
+     transform: translateX(-50%);
+   }
+   .cp_link2:hover::after {
+     width: 100%;
+   }
   </style>
   <title>Home</title>
  </head>
  <body>
   <h1>Home</h1>
-  <a href="https://G4TG5AG.github.io/downloads/">Downloads</a>
+  <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/">Downloads</a>
  </body>
 </html>
