--- a/home/index.html
+++ b/home/index.html
@@ -50,11 +50,15 @@
    .cp_link2:hover::after {
      width: 100%;
    }
+   .cp_h1title {
+     padding: 0.1em 0.3em;
+     border-left: 10px solid #00BCD4;
+   }
   </style>
-  <title>Home</title>
+  <title>ホームページ</title>
  </head>
  <body>
-  <h1>Home</h1>
-  <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/">Downloads</a>
+  <h1 class="cp_h1title">ホームページ</h1>
+  <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/">ダウンロード</a>
  </body>
 </html>
