--- a/downloads/index.html
+++ b/downloads/index.html
@@ -103,12 +103,16 @@
    .cp_link2:hover::after {
      width: 100%;
    }
+   .cp_h1title {
+     padding: 0.1em 0.3em;
+     border-left: 10px solid #00BCD4;
+   }
   </style>
-  <title>Downloads</title>
+  <title>ダウンロード</title>
  </head>
  <body>
-  <h1>Downloads</h1>
-  <a class="cp_link2" href="https://G4TG5AG.github.io/home/">Home</a><br>
+  <h1 class="cp_h1title">ダウンロード</h1>
+  <a class="cp_link2" href="https://G4TG5AG.github.io/home/">ホームページ</a><br>
   <ul class="cp_list">
    <font size="5">Windows</font><br>
    <li><font size="4">コンピューターの詳細</font><br></li>
