--- a/downloads/index.html
+++ b/downloads/index.html
@@ -121,7 +121,8 @@
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x64/コンピューターの詳細.exe" download="コンピューターの詳細_x64.exe">コンピューターの詳細(x64)</a><br>
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/x86/コンピューターの詳細.exe" download="コンピューターの詳細_x86.exe">コンピューターの詳細(x86)</a><br>
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/ARM64/コンピューターの詳細.exe" download="コンピューターの詳細_arm64.exe">コンピューターの詳細(ARM64)</a><br>
-    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/AnyCPU/コンピューターの詳細.exe" download="コンピューターの詳細_anycpu.exe">コンピューターの詳細(AnyCPU)</a><br><br>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/AnyCPU/コンピューターの詳細_x64.exe" download="コンピューターの詳細_anycpu_x64.exe">コンピューターの詳細(AnyCPU) x64優先</a><br>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/AnyCPU/コンピューターの詳細_x86.exe" download="コンピューターの詳細_anycpu_x86.exe">コンピューターの詳細(AnyCPU) x86優先</a><br><br>
    </ui>
   </ul>
  </body>
