--- a/home/index.html
+++ b/home/index.html
@@ -59,6 +59,7 @@
  </head>
  <body>
   <h1 class="cp_h1title">ホームページ</h1>
-  <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/">ダウンロード</a>
+  <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/">ダウンロード</a><br>
+  <a class="cp_link2" href="https://github.com/G4TG5AG/G4TG5AG.github.io/">GitHubリポジトリ</a>
  </body>
 </html>
