--- a/downloads/index.html
+++ b/downloads/index.html
@@ -62,7 +62,7 @@
    .cp_link {
      text-decoration: none;
      position: relative;
-     padding: 0.1em 0.3em;
+     //padding: 0.1em 0.3em;
      display: inline-block;
      transition: .3s;
      color: #FFA000;
@@ -84,7 +84,7 @@
    .cp_link2 {
      text-decoration: none;
      position: relative;
-     padding: 0.1em 0.3em;
+     //padding: 0.1em 0.3em;
      display: inline-block;
      transition: .3s;
      color: #0078d4;
