--- a/home/index.html
+++ b/home/index.html
@@ -31,7 +31,7 @@
    .cp_link2 {
      text-decoration: none;
      position: relative;
-     padding: 0.1em 0.3em;
+     /*padding: 0.1em 0.3em;*/
      display: inline-block;
      transition: .3s;
      color: #0078d4;
