--- a/downloads/index.html
+++ b/downloads/index.html
@@ -29,7 +29,7 @@
    }
    */
    ul.cp_list {
-     padding: 0.5em;
+     padding: 0.5em 0.5em 0.0em 0.5em;
      list-style: none;
    }
    ul.cp_list li {
