--- a/downloads/index.html
+++ b/downloads/index.html
@@ -127,7 +127,7 @@
   </ul>
   <ul class="cp_list">
    <li><font size="4">Visual Studio Code Tools</font><br></li>
-   <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download">Visual Studio Code</a> 用の便利なツールです。Batファイルのためコンソールコマンドを使用します。</font><br>
+   <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> 用の便利なツールです。Batファイルのためコンソールコマンドを使用します。</font><br>
    <ul class="cp_list">
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_Extension_Install.bat" download="CSharp_Extension_Install.bat">C#関連の拡張機能をインストールするツール</a><br>
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat">C#のWinFormsプロジェクトを作成するツール</a>
