--- a/downloads/index.html
+++ b/downloads/index.html
@@ -127,7 +127,7 @@
   </ul>
   <ul class="cp_list">
    <li><font size="4">Visual Studio Code Tools</font><br></li>
-   <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> 用の便利なツールです。Batファイルのためコンソールコマンドを使用します。</font><br>
+   <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> 用の便利なツールです。Batファイルのためコンソールコマンドを使用します。<br>「<a class="cp_link2" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat">C#のWinFormsプロジェクトを作成するツール</a>」を使用する場合、<a class="cp_link2" href="https://download.visualstudio.microsoft.com/download/pr/e3f91c3f-dbcc-44cb-a319-9cb15c9b61b9/6c87d96b2294afed74ccf414e7747b5a/dotnet-sdk-7.0.400-win-x64.exe" target="_blank" rel="noopener noreferrer">.NET 7 SDK (64 ビット)</a>をインストールしてください。</font><br>
    <ul class="cp_list">
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_Extension_Install.bat" download="CSharp_Extension_Install.bat">C#関連の拡張機能をインストールするツール</a><br>
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat">C#のWinFormsプロジェクトを作成するツール</a>
