--- a/code/cs/index.html
+++ b/code/cs/index.html
@@ -1,5 +1,6 @@
 <html lang="ja">
  <head>
+  <meta name="viewport" content="width=device-width">
   <style>
    @font-face {
      font-family: 'MeiryoFont';
