--- a/downloads/index.html
+++ b/downloads/index.html
@@ -131,7 +131,8 @@
    <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> 用の便利なツールです。バッチファイルのためコンソールコマンドを使用します。<br>「<a class="cp_link2" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat">C#のWinFormsプロジェクトを作成するツール</a>」を使用する場合、<a class="cp_link2" href="https://dotnet.microsoft.com/ja-jp/download" target="_blank" rel="noopener noreferrer">.NET 7.0 SDK x64</a> をインストールしてください。</font><br>
    <ul class="cp_list">
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_Extension_Install.bat" download="CSharp_Extension_Install.bat">C#関連の拡張機能をインストールするツール</a><br>
-    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat">C#のWinFormsプロジェクトを作成するツール</a>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat">C#のWinFormsプロジェクトを作成するツール</a><br>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WPF_Project_Create.bat" download="CSharp_WPF_Project_Create.bat">C#のWPFプロジェクトを作成するツール</a>
    </ul>
   </ul>
  </body>
