--- a/downloads/index.html
+++ b/downloads/index.html
@@ -145,7 +145,7 @@
  <body>
   <h1 class="cp_h1title">ダウンロード</h1>
   <a class="cp_link2" href="https://G4TG5AG.github.io/home/">ホームページ</a><br>
-  <ul class="cp_list">
+  <ul class="cp_list" style="margin: 0em 0em 0em 0em;">
    <font size="5">Windows</font><br>
    <li><font size="4"><budoux-ja>コンピューターの詳細</budoux-ja></font><br></li>
    <li class="none"></li>
@@ -158,7 +158,7 @@
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Application/コンピューターの詳細/AnyCPU/コンピューターの詳細_x86.exe" download="コンピューターの詳細_anycpu_x86.exe"><budoux-ja>コンピューターの詳細(AnyCPU) x86優先</budoux-ja></a>
    </ul>
   </ul>
-  <ul class="cp_list">
+  <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
    <li><font size="4">Visual Studio Code Tools</font><br></li>
    <li class="none"></li>
    <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> <budoux-ja>用の便利なツールです。バッチファイルのためコンソールコマンドを使用します。<br></budoux-ja><a class="cp_link2" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat"><budoux-ja>C#のWinFormsプロジェクトを作成するツール</budoux-ja></a> <budoux-ja>を使用する場合、</budoux-ja><a class="cp_link2" href="https://dotnet.microsoft.com/ja-jp/download" target="_blank" rel="noopener noreferrer">.NET 7.0 SDK x64</a> <budoux-ja>をインストールしてください。</budoux-ja></font><br>
@@ -168,7 +168,7 @@
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WPF_Project_Create.bat" download="CSharp_WPF_Project_Create.bat"><budoux-ja>C#のWPFプロジェクトを作成するツール</budoux-ja></a>
    </ul>
   </ul>
-  <ul class="cp_list">
+  <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
    <li><font size="4">NoEscape</font><br></li>
    <li class="none"></li>
    <font size="3"><a class="cp_link2" href="https://github.com/Endermanch" target="_blank" rel="noopener noreferrer">Endermanch</a> <budoux-ja>さんがホストしているGitHubリポジトリの</budoux-ja> <a class="cp_link3" href="https://github.com/Endermanch/MalwareDatabase" target="_blank" rel="noopener noreferrer">MalwareDatabase</a> <budoux-ja>内のファイル</budoux-ja> <a class="cp_link3" href="https://github.com/Endermanch/MalwareDatabase/blob/master/NoEscape.zip" target="_blank" rel="noopener noreferrer">NoEscape(マルウェア)</a> <budoux-ja>用の便利なツールです。<br>NoEscape を実行する際は</budoux-ja><a class="red"><budoux-ja>必ず仮想環境で</budoux-ja></a><budoux-ja>実行してください。</budoux-ja><br><a class="red"><budoux-ja>注意:このマルウェアによって生じた損害に対していかなる場合でもこのサイトの管理者は一切の責任を負いかねますのでご了承ください。</budoux-ja></a></font>
