--- a/home/index.html
+++ b/home/index.html
@@ -61,7 +61,7 @@
  <body>
   <h1 class="cp_h1title">ホームページ</h1>
   <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/">ダウンロード</a><br>
-  <a class="cp_link2" href="https://G4TG5AG.github.io/code/">ソースコード</a><br>
+  <!--<a class="cp_link2" href="https://G4TG5AG.github.io/code/">ソースコード</a><br>-->
   <a class="cp_link2" href="https://github.com/G4TG5AG/G4TG5AG.github.io/">GitHubリポジトリ</a>
  </body>
 </html>
