--- a/code/cs/index.html
+++ b/code/cs/index.html
@@ -61,7 +61,7 @@
  <body>
   <h1 class="cp_h1title">ソースコード</h1>
   <a class="cp_link2" href="https://G4TG5AG.github.io/home/">ホームページ</a><br><br>
-  <a class="cp_link2" href="https://G4TG5AG.github.io/code/cs/">戻る</a><br>
+  <a class="cp_link2" href="https://G4TG5AG.github.io/code/">戻る</a><br>
   <a class="cp_link2" href="https://G4TG5AG.github.io/code/cs/G4TG5AG.Shortcut">G4TG5AG.Shortcut</a><br>
  </body>
 </html>
