--- a/downloads/index.html
+++ b/downloads/index.html
@@ -163,11 +163,19 @@
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
    <li><font size="4">Visual Studio Code Tools</font><br></li>
    <li class="none"></li>
-   <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> <budoux-ja>用の便利なツールです。バッチファイルのためコンソールコマンドを使用します。<br></budoux-ja><a class="cp_link2" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat"><budoux-ja>C#のWinFormsプロジェクトを作成するツール</budoux-ja></a> <budoux-ja>を使用する場合、</budoux-ja><a class="cp_link2" href="https://dotnet.microsoft.com/ja-jp/download" target="_blank" rel="noopener noreferrer">.NET 7.0 SDK x64</a> <budoux-ja>をインストールしてください。</budoux-ja></font><br>
+   <font size="3"><a class="cp_link2" href="https://code.visualstudio.com/Download" target="_blank" rel="noopener noreferrer">Visual Studio Code</a> <budoux-ja>用のツールです。バッチファイルのためコンソールコマンドを使用します。<br></budoux-ja><a class="cp_link2" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat"><budoux-ja>C#のWinFormsプロジェクトを作成するツール</budoux-ja></a> <budoux-ja>を使用する場合、</budoux-ja><a class="cp_link2" href="https://dotnet.microsoft.com/ja-jp/download" target="_blank" rel="noopener noreferrer">.NET 7.0 SDK x64</a> <budoux-ja>をインストールしてください。</budoux-ja></font><br>
    <ul class="cp_list">
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_Extension_Install.bat" download="CSharp_Extension_Install.bat"><budoux-ja>C#関連の拡張機能をインストールするツール</budoux-ja></a><br>
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WinForms_Project_Create.bat" download="CSharp_WinForms_Project_Create.bat"><budoux-ja>C#のWinFormsプロジェクトを作成するツール</budoux-ja></a><br>
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Visual_Studio_Code_Tools/CSharp_WPF_Project_Create.bat" download="CSharp_WPF_Project_Create.bat"><budoux-ja>C#のWPFプロジェクトを作成するツール</budoux-ja></a>
+   </ul>
+  </ul>
+  <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
+   <li><font size="4">Bat Tools</font><br></li>
+   <li class="none"></li>
+   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。現在サポートされている機能は、ファイル埋め込み機能です。</budoux-ja></font><br>
+   <ul class="cp_list">
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Bat_Tools/BatTools.exe" download="BatTools.exe">Bat Tools(AnyCPU)</a>
    </ul>
   </ul>
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
