--- a/home/index.html
+++ b/home/index.html
@@ -7,10 +7,10 @@
      src: url('https://G4TG5AG.github.io/fonts/Meiryo/MEIRYO.TTC');
    }
    body {
-     font-family: 'MeiryoFont',Meiryo UI;
+     font-family: 'MeiryoFont';
    }
    .MeiryoFontText {
-     font-family: 'MeiryoFont',Meiryo UI;
+     font-family: 'MeiryoFont';
    }
    /*
    a:link {
