--- a/home/index.html
+++ b/home/index.html
@@ -1,6 +1,7 @@
 <html lang="ja">
  <head>
   <meta name="viewport" content="width=device-width">
+  <meta content="趣味で作成したウェブサイトです。Windowsアプリなどを配布しています。" name="description">
   <style>
    @font-face {
      font-family: 'MeiryoFont';
