--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+ <head>
+  <meta content="趣味で作成したウェブサイトです。Windowsアプリなどを配布しています。" name="description">
+ </head>
  <body>
   <!--
   <script type="text/javascript">
