--- a/downloads/index.html
+++ b/downloads/index.html
@@ -2,6 +2,7 @@
  <head>
   <meta name="viewport" content="width=device-width">
   <meta content="趣味で作成したウェブサイトです。Windowsアプリなどを配布しています。" name="description">
+  <meta name="google-site-verification" content="6n5kJR8uB0X8fs6OF6aHF0Wq1Cz3C8TTsM_GtZdsreM" />
   <style>
    @font-face {
      font-family: 'MeiryoFont';
