--- a/downloads/index.html
+++ b/downloads/index.html
@@ -175,9 +175,9 @@
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
    <li><font size="4">Bat Tools</font><br></li>
    <li class="none"></li>
-   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。現在サポートされている機能は、ファイル埋め込み機能です。</budoux-ja></font><br>
+   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。</budoux-ja></font><br>
    <ul class="cp_list">
-    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Bat_Tools/BatTools.exe" download="BatTools.exe">Bat Tools(AnyCPU)</a>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/">ダウンロードサイト</a>
    </ul>
   </ul>
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
