--- a/downloads/BatTools/index.html
+++ b/downloads/BatTools/index.html
@@ -154,9 +154,9 @@
    <font size="5">BatTools</font><br>
    <li><font size="4">アプリケーション</font><br></li>
    <li class="none"></li>
-   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。現在サポートされている機能は、ファイル埋め込み機能です。バージョンは、1.0.22.0です。</budoux-ja><br><budoux-ja>更新内容:</budoux-ja><br><budoux-ja>バージョン1.0.0.0 アプリケーションを公開しました。<br>バージョン1.0.22.0 言語拡張パックを使うことで英語表示できるようにしました。 パス名に空白が使われていた場合に正常に動作しない問題を修正しました。</budoux-ja></font><br>
+   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。現在サポートされている機能は、ファイル埋め込み機能です。バージョンは、1.0.22.0です。</budoux-ja><br><budoux-ja>更新内容:</budoux-ja><br><a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.0.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.0.0</budoux-ja></a> <budoux-ja>アプリケーションを公開しました。</budoux-ja><br><a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.22.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.22.0</budoux-ja></a> <budoux-ja>言語拡張パックを使うことで英語表示できるようにしました。 パス名に空白が使われていた場合に正常に動作しない問題を修正しました。</budoux-ja></font><br>
    <ul class="cp_list">
-    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/file/Bat/Bat_Tools/BatTools.exe" download="BatTools.exe">Bat Tools(AnyCPU)</a>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.22.0/BatTools.exe" download="BatTools.exe">Bat Tools(AnyCPU)</a>
    </ul>
   </ul>
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
