--- a/downloads/BatTools/index.html
+++ b/downloads/BatTools/index.html
@@ -162,7 +162,7 @@
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
    <li><font size="4">言語拡張パック</font><br></li>
    <li class="none"></li>
-   <font size="3"><budoux-ja>BatToolsの言語を拡張することができます。アプリケーションが存在しているフォルダに 言語コード-国コード(例えば 英語(米国) の場合は en-US など) のフォルダを作成し、対応したファイルを入れることでその言語で表示できます。(Windowsの表示言語によって変わります) 現在、言語拡張パックに対応している言語は以下の通りです。(日本語は標準搭載されています)</budoux-ja><br><budoux-ja>英語(米国)</budoux-ja></font>
+   <font size="3"><budoux-ja>BatToolsの言語を拡張することができます。バージョン1.0.22.0以降で使用可能です。<br>アプリケーションが存在しているフォルダに 言語コード-国コード(例えば 英語(米国) の場合は en-US など) のフォルダを作成し、対応したファイルを入れることでその言語で表示できます。(Windowsの表示言語によって変わります)<br>現在、言語拡張パックに対応している言語は以下の通りです。(日本語は標準搭載されています)</budoux-ja><br><budoux-ja>英語(米国)</budoux-ja></font>
    <ul class="cp_list">
     <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Language_Expansion_Pack/en-US.zip" download="en-US.zip">English(United States)</a><br>
    </ul>
