--- a/downloads/BatTools/index.html
+++ b/downloads/BatTools/index.html
@@ -153,9 +153,9 @@
    <font size="5">BatTools</font><br>
    <li><font size="4">アプリケーション</font><br></li>
    <li class="none"></li>
-   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。現在サポートされている機能は、ファイル埋め込み機能です。最新バージョンは、1.0.24.0です。</budoux-ja><br><budoux-ja>更新内容:</budoux-ja><br>2023/10/04 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.0.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.0.0</budoux-ja></a> <budoux-ja>アプリケーションを公開しました。</budoux-ja><br>2023/10/07 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.22.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.22.0</budoux-ja></a> <budoux-ja>言語拡張パックを使うことで英語表示できるようにしました。 パス名に空白が使われていた場合に正常に動作しない問題を修正しました。</budoux-ja><br>2023/10/07 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.24.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.24.0</budoux-ja></a> <budoux-ja>自動でフォルダを作成するようにしました。</budoux-ja></font><br>
+   <font size="3"><budoux-ja>バッチファイルの作成などに使えるツールです。現在サポートされている機能は、ファイル埋め込み機能です。現在の最新バージョンは、1.0.27.0です。</budoux-ja><br><budoux-ja>更新内容:</budoux-ja><br>2023/10/04 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.0.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.0.0</budoux-ja></a> <budoux-ja>アプリケーションを公開しました。</budoux-ja><br>2023/10/07 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.22.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.22.0</budoux-ja></a> <budoux-ja>言語拡張パックを使うことで英語表示できるようにしました。 パス名に空白が使われていた場合に正常に動作しない問題を修正しました。</budoux-ja><br>2023/10/07 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.24.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.24.0</budoux-ja></a> <budoux-ja>自動でフォルダを作成するようにしました。</budoux-ja><br>2023/10/08 <a class="cp_link2" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.27.0/BatTools.exe" download="BatTools.exe"><budoux-ja>バージョン1.0.27.0</budoux-ja></a> <budoux-ja>Windowsの表示言語が日本語以外(英語)でもダイアログのタイトルやフィルターが日本語で表示されていた問題を修正しました。言語パックを更新する必要があります。</budoux-ja></font><br>
    <ul class="cp_list">
-    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.24.0/BatTools.exe" download="BatTools.exe">Bat Tools(AnyCPU)</a>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Application/1.0.27.0/BatTools.exe" download="BatTools.exe">Bat Tools(AnyCPU)</a>
    </ul>
   </ul>
   <ul class="cp_list" style="margin: -0.25em 0em 0em 0em;">
@@ -163,7 +163,8 @@
    <li class="none"></li>
    <font size="3"><budoux-ja>BatToolsの言語を拡張することができます。バージョン1.0.22.0以降で使用可能です。<br>アプリケーションが存在しているフォルダに 言語コード-国コード(例えば 英語(米国) の場合は en-US など) のフォルダを作成し、対応したファイルを入れることでその言語で表示できます。(Windowsの表示言語によって変わります)<br>現在、言語拡張パックに対応している言語は以下の通りです。(日本語は標準搭載されています)</budoux-ja><br><budoux-ja>英語(米国)</budoux-ja></font>
    <ul class="cp_list">
-    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Language_Expansion_Pack/en-US.zip" download="en-US.zip">English(United States)</a><br>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Language_Expansion_Pack/1.0.27.0/en-US.zip" download="en-US.zip">English (United States) Language Extension Pack for versions 1.0.27.0</a><br>
+    <a class="cp_link" href="https://G4TG5AG.github.io/downloads/BatTools/Language_Expansion_Pack/1.0.22.0/en-US.zip" download="en-US.zip">English (United States) Language Extension Pack for versions 1.0.22.0 and 1.0.24.0</a><br>
    </ul>
   </ul>
   <br>
