--- a/home/index.html
+++ b/home/index.html
@@ -3,6 +3,6 @@
   <meta content="趣味で作成したウェブサイトです。Windowsアプリなどを配布しています。" name="description">
  </head>
  <body>
-  <meta http-equiv="refresh" content="0;URL=https://DESKTOP-G4TG5AG.github.io/home/">
+  <meta http-equiv="refresh" content="0;URL=https://DESKTOP-G4TG5AG.github.io/home">
  </body>
 </html>
